syntax = "proto3";

package protos;
option go_package = "orch-go/gen/protos;protos";
option csharp_namespace = "Core";



import "custom_types.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "customer.proto";
import "account_type.proto";

service AccountService {
  rpc GetAll (GetAllRequest) returns (GetAllAccountsResponse);
  rpc GetById (GetAccountByIdRequest) returns (AccountModel);
  rpc GetByIds(GetAccountByIdsRequest) returns (GetAllAccountsResponse);
  rpc GetByCustomerId (GetAccountByCustomerIdRequest) returns (GetAllAccountsResponse);
  rpc GetByDateRange (GetByDateRangeRequest) returns (GetAllAccountsResponse);
  rpc Add (AddAccountRequest) returns (AccountModel);
  rpc Update (UpdateAccountRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteAccountRequest) returns (google.protobuf.Empty);
  rpc AddBulk (AddAccountBulkRequest) returns (google.protobuf.Empty);
  rpc UpdateBulk (UpdateAccountBulkRequest) returns (google.protobuf.Empty);
  rpc DeleteBulk (DeleteAccountBulkRequest) returns (google.protobuf.Empty);
  rpc GetCount (google.protobuf.Empty) returns (CountResponse);
  rpc GetCountByStatus (GetAccountsByStatusRequest) returns (CountResponse);
  rpc GetCountByDateRange (GetByDateRangeRequest) returns (CountResponse);
  rpc GetCountByCustomerId (GetAccountByCustomerIdRequest) returns (CountResponse);
  rpc GetTotalBalance (google.protobuf.Empty) returns (TotalBalanceResponse);
}

message TotalBalanceResponse {
  string total_balance = 1;
}

message AccountModel {
  int32 account_id = 1;
  optional int32 customer_id = 2;
  optional int32 type_id = 3;
  string iban = 4;
  optional string balance = 5;
  optional google.protobuf.Timestamp created_at = 6;
  optional bool is_active = 7;
}

message GetAccountByCustomerIdRequest {
  int32 customer_id = 1;
}

message GetAllAccountsResponse {
  repeated AccountModel accounts = 1;
}

message GetAccountByIdsRequest{
  repeated int32 account_ids = 1;
}

message GetAccountByIdRequest {
  int32 account_id = 1;
}

message AddAccountRequest {
  optional int32 customer_id = 1;
  optional int32 type_id = 2;
  string iban = 3;
  optional string balance = 4;
  optional bool is_active = 5;
}

message AddAccountBulkRequest {
  repeated AddAccountRequest accounts = 1;
}

message UpdateAccountRequest {
  int32 account_id = 1;
  optional int32 customer_id = 2;
  optional int32 type_id = 3;
  string iban = 4;
  optional string balance = 5;
  optional bool is_active = 6;
}

message DeleteAccountRequest {
  int32 account_id = 1;
}

message UpdateAccountBulkRequest {
  repeated UpdateAccountRequest accounts = 1;
}

message DeleteAccountBulkRequest {
  repeated DeleteAccountRequest accounts = 1;
}

message GetAccountsByStatusRequest{
  bool status = 1;
}
